--- a/admin.html
+++ b/admin.html
@@ -1,84 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Quiz Admin Panel</title>
+  <title>Trivia Session – Admin Panel</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 </head>
 <body>
-  <h2>Istanbul Quiz – Admin Panel</h2>
-
-  <select id="category">
-    <option>COĞRAFYA</option>
-    <option>GENEL KÜLTÜR</option>
-    <option>DÜNYA MUTFAĞI</option>
-    <option>SPOR BİLGİ</option>
-    <option>FİNAL</option>
-  </select><br><br>
-
-  <textarea id="question" placeholder="Enter question text" rows="2" cols="50"></textarea><br>
+  <h2>Admin – Trivia Session</h2>
+  <textarea id="question" placeholder="Question text" rows="2" cols="50"></textarea><br>
   <input id="opt1" placeholder="Option 1" />
   <input id="opt2" placeholder="Option 2" />
   <input id="opt3" placeholder="Option 3" />
-  <input id="opt4" placeholder="Option 4" /><br><br>
-  <input id="correct" placeholder="Correct Answer" />
-  <button onclick="sendQuestion()">Send Question</button>
+  <input id="opt4" placeholder="Option 4" /><br>
+  <input id="correct" placeholder="Correct answer (exact text)" /><br><br>
+  <button onclick="sendQuestion()">🚀 Send to Participants</button>
+
+  
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyDecxoqlRsg2jDC7E2jIRwios4St57NGy4",
+    authDomain: "dymerhealthquiz.firebaseapp.com",
+    databaseURL: "https://dymerhealthquiz-default-rtdb.europe-west1.firebasedatabase.app/",
+    projectId: "dymerhealthquiz",
+    storageBucket: "dymerhealthquiz.appspot.com",
+    messagingSenderId: "610713056223",
+    appId: "1:610713056223:web:e6b41d007924917527ca6a"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
+</script>
 
   <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyDecxoqlRsg2jDC7E2jIRwios4St57NGy4",
-      authDomain: "dymerhealthquiz.firebaseapp.com",
-      databaseURL: "https://dymerhealthquiz-default-rtdb.europe-west1.firebasedatabase.app/",
-      projectId: "dymerhealthquiz",
-      storageBucket: "dymerhealthquiz.appspot.com",
-      messagingSenderId: "610713056223",
-      appId: "1:610713056223:web:e6b41d007924917527ca6a"
-    };
-
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.database();
-
     let questionIndex = 0;
-
     function sendQuestion() {
-      const category = document.getElementById("category").value;
       const q = document.getElementById("question").value;
-      const options = [
-        document.getElementById("opt1").value,
-        document.getElementById("opt2").value,
-        document.getElementById("opt3").value,
-        document.getElementById("opt4").value
-      ];
+      const options = [document.getElementById("opt1").value, document.getElementById("opt2").value, document.getElementById("opt3").value, document.getElementById("opt4").value];
       const correct = document.getElementById("correct").value;
-
-      if (!q || options.some(opt => !opt) || !correct) {
-        alert("Please fill in all fields.");
-        return;
-      }
 
       const questionData = {
         index: questionIndex++,
-        category: category,
         text: q,
         options: options,
-        correct: correct
+        correct: correct,
+        timestamp: Date.now()
       };
-
       db.ref("currentQuestion").set(questionData);
       db.ref("questions").push(questionData);
-
-      alert("✅ Question sent and stored!");
-      clearForm();
-    }
-
-    function clearForm() {
-      document.getElementById("question").value = "";
-      document.getElementById("opt1").value = "";
-      document.getElementById("opt2").value = "";
-      document.getElementById("opt3").value = "";
-      document.getElementById("opt4").value = "";
-      document.getElementById("correct").value = "";
     }
   </script>
 </body>
